# PoE2-butler

./: .gitignore  AGENTS.md  DEPLOY.md  GGG_API.md  INSTRUCTIONS.md  LICENSE  Makefile  README.md  SECURITY.md  TESTS.md
.github/workflows/: ci.yml  security-review.yml
admin/: Dockerfile  README.md  pyproject.toml
admin/app/: __init__.py  auth.py  config.py  db.py  main.py  middleware.py  redis_stats.py
admin/app/templates/: base.html  cache.html  home.html  login.html  snapshots.html  upstream.html  users.html
admin/tests/: test_auth.py
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_valuable_threshold.py  0003_prev_payload.py  0004_item_shares.py
backend/app/: __init__.py  config.py  deps.py  logging.py  main.py  middleware.py
backend/app/api/: __init__.py  activity.py  auth.py  cdn_proxy.py  characters.py  health.py  items.py  leagues.py  me.py  prefs.py  pricing.py  public_item.py  refresh.py  shares.py  stashes.py  trade.py
backend/app/clients/: __init__.py  ggg.py
backend/app/data/: mod_ranges.json  unique_reference.json
backend/app/db/: __init__.py  base.py  models.py
backend/app/domain/: __init__.py  character.py  item.py  item_text.py  league.py  stash.py  stat_summary.py
backend/app/security/: __init__.py  crypto.py  csrf.py  pkce.py  sessions.py
backend/app/services/: ggg_token.py  mod_db.py  share_ratelimit.py  snapshot.py  third_party_ratelimit.py  trade_stat_catalog.py  trade_url.py  unique_reference.py
backend/app/services/pricing/: __init__.py  cache.py  matcher.py  poe_ninja.py  service.py  source.py  static.py
backend/app/workers/: arq_worker.py
backend/scripts/: extract_mod_ranges.py  ingest_poe2db_uniques.py
backend/tests/: conftest.py  test_activity.py  test_auth_flow.py  test_cdn_proxy.py  test_domain.py  test_ggg_client.py  test_health.py  test_item_text.py  test_item_text_api.py  test_pricing.py  test_security.py  test_shares.py  test_stat_summary.py  test_trade_url.py
deploy/compose/: docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.uat.yml
deploy/compose/traefik/: dynamic.dev.yml  dynamic.prod.yml  dynamic.uat.yml  traefik.dev.yml  traefik.prod.yml  traefik.uat.yml
deploy/env/: .env.e2e  .env.example  .env.uat.example
docs/: BOT_API.md  RESTORE_DRILL_LOG.md  openapi.json  unique_reference.md
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  docker-entrypoint.dev.sh  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/e2e/: helpers.ts  login.spec.ts  stash-item.spec.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  hooks.ts  types.ts
frontend/src/store/: uiStore.ts
frontend/src/utils/: clipboard.test.ts  clipboard.ts  (+3 more)
mock-ggg/: .dockerignore  Dockerfile  pyproject.toml
mock-ggg/app/: __init__.py  main.py
mock-ggg/app/fixtures/: characters.json  stashes.json  users.json
mock-ggg/samples/: armor.txt  belt.txt  charm.txt  chrono.json  convert.py  crossbow.txt  druid.json  gloves.txt  helmet.txt  tactician.json
(+38 files in other folders)
