[project]
name = "poe2b-admin"
version = "0.1.0"
description = "Read-only observability console for PoE2 Hideout Butler."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.114",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "aiosqlite>=0.20",
    "redis>=5.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyotp>=2.9",
    "bcrypt>=4.1",
    "structlog>=24.1",
    "httpx>=0.27",
    "itsdangerous>=2.2",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "fakeredis>=2.23",
    "httpx>=0.27",
    "ruff>=0.5",
    "pip-audit>=2.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PL", "RUF"]
# B008: FastAPI idiomatically uses Depends(...) in defaults.
# PLR2004 / PLR0913: pragmatic; readable code wins over magic-number lint.
ignore = ["B008", "PLR2004", "PLR0913"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra"
testpaths = ["tests"]
pythonpath = [".."]

[tool.uv]
package = false
